[gd_scene load_steps=2 format=3 uid="uid://cb31f55b7luof"]

[ext_resource type="Script" path="res://gui/menu/multiplayer_menu.gd" id="1_dycj3"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dycj3")

[node name="ContentContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.5
offset_top = -33.0
offset_right = 148.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
vertical = true

[node name="ConnectionContainer" type="BoxContainer" parent="ContentContainer"]
layout_mode = 2
alignment = 1

[node name="HostField" type="LineEdit" parent="ContentContainer/ConnectionContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
tooltip_text = "The server hostname or ip address (e.x: 127.0.0.1)"
placeholder_text = "Server host"
max_length = 30

[node name="PortField" type="LineEdit" parent="ContentContainer/ConnectionContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
tooltip_text = "The server hostname or ip address (e.x: 127.0.0.1)"
placeholder_text = "Port"
max_length = 5
select_all_on_focus = true

[node name="ConnectButton" type="Button" parent="ContentContainer/ConnectionContainer"]
layout_mode = 2
text = "Connect"

[node name="OrText" type="Label" parent="ContentContainer"]
layout_mode = 2
text = "OR"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="ContentContainer"]
layout_mode = 2
text = "Host server"

[node name="QuitButton" type="Button" parent="ContentContainer"]
layout_mode = 2
text = "Quit game"

[connection signal="pressed" from="ContentContainer/ConnectionContainer/ConnectButton" to="." method="connect_to_server"]
[connection signal="pressed" from="ContentContainer/HostButton" to="." method="host_server"]
[connection signal="pressed" from="ContentContainer/QuitButton" to="." method="quit_game"]
